arreglando las rutas

--- a/api/templates/welcome.html
+++ b/api/templates/welcome.html
@@ -147,7 +147,7 @@
         <h2>API</h2>
         <p>Esta es la documentación de nuestra API. Aquí encontrarás enlaces útiles:</p>
         <ul>
-            <li><a href="/api/urls">urls</a></li>
+            <li><a href="/api/">API</a></li>
         </ul>
         <p>Administración:</p>
         <ul>
